deploy postxdb and docbox at cargo.run